src/objects/vlocity_ins__ProductConfigurationChangeLog__c.object
<CustomObject>
    <description>Represents the Product configuration changes on the large text custom fields, which cannot be tracked through the SalesForce field history tracking feature.</description>
    <fields>
        <fullName>vlocity_ins__ChildObjectAPIName__c</fullName>
        <description>Represents the API name of a related object whose record was modified</description>
        <externalId>true</externalId>
        <label>Child Object API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FieldAPIName__c</fullName>
        <description>Represents the API name of the custom field on Product2 or on any other child object of Product2 that has been changed. Namespace should be included in the API name.</description>
        <label>Field API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NewValue__c</fullName>
        <description>Represents the new value of the field, after the update.</description>
        <label>NewValue</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OldValue__c</fullName>
        <description>Represents original value of the field, prior to the update.</description>
        <label>OldValue</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Represents the ID of the Product whose configuration has been changed.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Configuration Change Logs</relationshipLabel>
        <relationshipName>ProductConfigurationChangeLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RecordId__c</fullName>
        <description>Represents the ID of the record that has been changed. For example, this would be the ID of an AttributeAssignment__c record, when a Product’s attribute is modified.</description>
        <externalId>true</externalId>
        <label>RecordId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Product Configuration Change Log</label>
    <nameField>
        <label>Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Configuration Change Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>